...
class SignUpViewController: UIViewController {

    @IBOutlet var txtEmail: UITextField!
    @IBOutlet var txtPassword: UITextField!
    @IBOutlet var txtUserType: UITextField!

    var userTypes = ["Student", "Academic Staff", "Non-Academic Staff"]
    var pickerUserTypes = UIPickerView()
    let getLocation = LocationManager()
    var lat: CLLocationDegrees?
    var long: CLLocationDegrees?

    override func viewDidLoad() {
...
